--- a/src/components/PageProvider/PageProvider.scss
+++ b/src/components/PageProvider/PageProvider.scss
@@ -9,7 +9,7 @@ body {
     -webkit-font-smoothing: auto;
     overscroll-behavior-x: none;
     font-size: 12px;
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
         sans-serif;
     transition: 250ms opacity ease-in-out;
