--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -81,9 +81,9 @@
                 justify-content: flex-end;
                 color: $color-text-primary;
 
-                @media (max-width: 950px) {
+                /* @media (max-width: 950px) {
                     margin-left: -1.5rem;
-                }
+                } */
 
                 .Cart {
                     display: flex;
