--- a/src/components/PageContent/PageContent.scss
+++ b/src/components/PageContent/PageContent.scss
@@ -3,7 +3,7 @@
 .PageContent {
     width: 100%;
     max-width: calc(#{$width-max-page} - 4rem);
-    margin: 0px auto;
+    margin: 1rem auto 0px auto;
 
     @media (max-width: $width-max-page) {
         padding-left: 1rem;
