Feat: Add filters to ShopBlock.

--- a/pages/products/[handle]/ProductPage.scss
+++ b/pages/products/[handle]/ProductPage.scss
@@ -33,9 +33,12 @@
         }
 
         .ProductPage-Content-Body {
+            font-size: 1.5rem;
+            line-height: 2rem;
+
             .MarkdownBody {
                 padding: 1rem 0px;
-                font-size: 1.25rem;
+                font-size: 1.5rem;
 
                 a {
                     color: $color-primary;
