--- a/pages/products/[handle]/ProductPage.scss
+++ b/pages/products/[handle]/ProductPage.scss
@@ -53,8 +53,9 @@
             }
 
             .ProductPage-Content-Body-Ingredients {
-                padding-top: 1rem;
-                font-size: 0.95rem;
+                padding-top: 0px;
+                font-size: 1rem;
+                line-height: 1.25rem;
                 font-style: italic;
 
                 b {
