--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -51,7 +51,7 @@
 
         nav {
             display: flex;
-            justify-content: center;
+            justify-content: flex-end;
             align-items: center;
             flex-direction: row;
             width: 100%;
@@ -60,6 +60,7 @@
             .Header-Content-Search {
                 flex-grow: 1;
                 width: 100%;
+                max-width: 24rem;
                 box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
 
                 .Input {
