Components: Fix SearchHeader.

--- a/pages/app.scss
+++ b/pages/app.scss
@@ -48,6 +48,7 @@
 @import '../src/components/ProductVariants/ProductVariants.scss';
 @import '../src/components/ScrollToTop/ScrollToTop.scss';
 @import '../src/components/SearchBar/SearchBar.scss';
+@import '../src/components/SearchHeader/SearchHeader.scss';
 @import '../src/components/ShopifyAnalytics/ShopifyAnalytics.scss';
 @import '../src/components/Slices/Slices.scss';
 @import '../src/components/SocialShare/SocialShare.scss';
