--- a/pages/search/SearchPage.scss
+++ b/pages/search/SearchPage.scss
@@ -1,9 +1,9 @@
-@import "../../src/scss/app";
+@import '../../src/scss/app';
 
 .SearchPage {
     .Input {
         padding: 1.15rem;
-        border: 0.15rem solid $color-dark;
+        border: 0.2rem solid $color-dark;
         border-radius: $block-border-radius;
     }
 }
