--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,7 +17,7 @@
     background: $color-primary;
 
     @media (max-width: 950px) {
-        padding: 0px 1rem;
+        padding: 0px 1.5rem;
     }
 
     .Header-Content {
@@ -61,9 +61,8 @@
                 flex-grow: 1;
                 width: 100%;
                 max-width: 24rem;
-                box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
 
-                .Input {
+                input {
                     height: 3.5rem;
                     margin: 1.25rem 0px;
                     border-radius: $block-border-radius;
