--- a/src/components/OrdersBlock/OrdersBlock.scss
+++ b/src/components/OrdersBlock/OrdersBlock.scss
@@ -1,4 +1,4 @@
-@import "../../scss/app";
+@import '../../scss/app';
 
 .OrdersBlock {
     .OrdersBlock-Order {
@@ -7,7 +7,7 @@
         align-items: center;
         padding: 2rem;
         font-size: 1.25rem;
-        border: 0.15rem solid $color-silvery;
+        border: 0.2rem solid $color-silvery;
         cursor: pointer;
 
         .OrdersBlock-Order-Meta {
