--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -10,6 +10,21 @@
     input {
         padding: 1rem;
         background: $color-white;
+        width: 100%;
+        box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
+        border: 0.2rem solid $color-white;
+
+        &::placeholder {
+            text-transform: uppercase;
+            font-weight: 700;
+            opacity: 0.5;
+        }
+
+        &:hover,
+        &:focus {
+            outline: none;
+            border-color: $color-primary-dark;
+        }
     }
 
     .SearchBar-Cross {
