--- a/src/components/SearchHeader/SearchHeader.scss
+++ b/src/components/SearchHeader/SearchHeader.scss
@@ -9,7 +9,7 @@
     width: 100%;
     background: $color-white;
     border-bottom: 0.05rem solid $color-silvery;
-    box-shadow: 0px 5px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 5px 15px -10px rgba(0, 0, 0, 0.75);
 
     @media (max-width: 950px) {
         padding: 1rem 0px;
@@ -38,27 +38,6 @@
         @media (max-width: $width-max-mobile) {
             grid-template-columns: 1fr;
             margin: 2rem 0px 0px 0px;
-        }
-    
-        &::-webkit-scrollbar {
-            height: 1.5rem;
-        }
-        &::-webkit-scrollbar-thumb {
-            background-clip: content-box;
-            border-top: 5px solid transparent;
-            border-bottom: 5px solid transparent;
-            border-radius: 0px;
-            box-shadow: inset 0 0 0 5px;
-            color: rgba(0, 0, 0, 0.15);
-            cursor: pointer;
-        }
-        &::-webkit-scrollbar-button {
-            width: 0;
-            height: 0;
-            display: none;
-        }
-        &::-webkit-scrollbar-corner {
-            background-color: transparent;
         }
     }
 }
