--- a/src/components/Slices/components/Collapse/Collapse.scss
+++ b/src/components/Slices/components/Collapse/Collapse.scss
@@ -1,4 +1,4 @@
-@import "../../../../scss/app";
+@import '../../../../scss/app';
 
 .Slice-Collapse {
     padding: 0.5rem 0px 0.75rem 0px;
@@ -19,7 +19,7 @@
         border-bottom: 0.15rem solid $color-black;
 
         @media (min-width: $width-max-mobile) {
-            transition: 250ms ease-in-out;
+            transition: 250ms all ease-in-out;
 
             &:hover {
                 border-color: $color-primary;
