Slices: Fix Vendors slice.

--- a/pages/app.scss
+++ b/pages/app.scss
@@ -13,6 +13,7 @@
 @import '../src/components/Slices/components/SectionHeader/SectionHeader.scss';
 @import '../src/components/Slices/components/ShopBlock/ShopBlock.scss';
 @import '../src/components/Slices/components/TextBlock/TextBlock.scss';
+@import '../src/components/Slices/components/Vendors/Vendors.scss';
 
 // Components
 @import '../src/components/Alert/Alert.scss';
