--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -24,6 +24,7 @@
     }
 
     .CartItem-ProductImage {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
