Components: Move nav to header on larger screens.
Also migrate CollectionBlock's to the new PageHeader.

--- a/src/components/HeaderNavigation/HeaderNavigation.scss
+++ b/src/components/HeaderNavigation/HeaderNavigation.scss
@@ -14,6 +14,10 @@
 
     box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
 
+    @media (min-width: $width-max-mobile) {
+        display: none;
+    }
+
     .HeaderNavigation-Content {
         display: flex;
         justify-content: flex-start;
