--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -37,7 +37,7 @@
             justify-content: center;
             align-items: center;
             height: calc(100% - 2.5rem);
-            width: 16rem;
+            width: 14rem;
             max-width: calc(50vw - 4rem);
             margin-right: 2.5rem;
             background-size: contain;
@@ -50,19 +50,56 @@
         }
 
         nav {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            flex-direction: row;
+            display: grid;
+            grid-template-columns: 1fr auto auto;
             width: 100%;
-            height: 6rem;
+            height: 100%;
+            max-height: 6rem;
+
+            @media (min-width: 950px) {
+                grid-template-columns: 1fr 24rem auto;
+            }
+
+            .Header-Content-Nav {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+
+                .Link {
+                    margin-right: 2.5rem;
+                    margin-bottom: -0.2rem;
+                    text-transform: uppercase;
+                    color: $color-text-primary;
+                    font-size: 1.5rem;
+                    font-weight: 600;
+                    letter-spacing: 0.05rem;
+                    transition: 150ms;
+                    border-bottom: 0.2rem solid transparent;
+
+                    @media (min-width: $width-max-mobile) {
+                        &:hover,
+                        &:active {
+                            border-bottom-color: $color-text-primary;
+                        }
+                    }
+                }
+
+                @media (max-width: 950px) {
+                    display: none;
+                }
+            }
 
             .Header-Content-Search {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
                 flex-grow: 1;
                 width: 100%;
                 max-width: 24rem;
+                background: 100%;
 
                 input {
+                    width: 100%;
                     height: 3.5rem;
                     margin: 1.25rem 0px;
                     border-radius: $block-border-radius;
