--- a/src/components/CollectionBlock/CollectionBlock.scss
+++ b/src/components/CollectionBlock/CollectionBlock.scss
@@ -50,7 +50,7 @@
             align-items: center;
             background-color: $color-primary !important;
             color: $color-text-primary;
-            font-size: 2rem;
+            font-size: 1.5rem;
             font-weight: bold;
             text-transform: uppercase;
             text-align: center;
@@ -66,6 +66,13 @@
     }
 
     &.CollectionBlock-Grid {
+        .CollectionBlock-Content {
+            .ProductCard {
+                width: 100%;
+                min-width: 100%;
+            }
+        }
+
         // FIXME: move to ProductCard
         @media (max-width: $width-max-mobile) {
             .CollectionBlock-Content {
