--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -5,7 +5,7 @@
     display: grid;
     scroll-snap-align: start;
     min-height: 6rem;
-    padding: 1rem;
+    padding: 0.75rem;
     background: $color-silvery;
     border: 0.2rem solid darken($color-silvery, 2.5%);
     box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
@@ -48,7 +48,6 @@
             img {
                 max-height: 16rem;
                 max-width: 100%;
-                padding: 1rem;
                 object-fit: contain;
                 object-position: center center;
             }
@@ -87,7 +86,6 @@
                 font-size: 1.65rem;
                 line-height: 1.75rem;
                 font-weight: 700;
-                padding-bottom: 1rem;
                 color: $color-primary;
 
                 @media (min-width: $width-max-mobile) {
@@ -117,7 +115,7 @@
             display: flex;
             justify-content: flex-start;
             align-items: center;
-            height: 2.75rem;
+            height: 2rem;
             background: $color-white;
             font-size: 1rem;
             font-weight: 400;
@@ -136,7 +134,7 @@
                     grid-template-columns: auto auto auto auto;
                     flex-wrap: wrap;
                     width: 100%;
-                    padding-bottom: 0.5rem;
+                    padding-bottom: 0.25rem;
 
                     &.Open {
                         display: flex;
@@ -150,14 +148,14 @@
                         justify-content: center;
                         align-items: center;
                         flex-grow: 0;
-                        height: 2.75rem;
-                        max-height: 2.75rem;
-                        padding: 0px 0.55rem;
+                        height: 2.5rem;
+                        max-height: 2.5rem;
+                        padding: 0px 0.25rem;
                         margin: 0px 0.55rem 0.55rem 0px;
                         background: $color-white;
                         border: 0.2rem solid $color-white;
                         border-radius: $block-border-radius;
-                        line-height: 2.45rem;
+                        line-height: 2rem;
                         font-size: 1.15rem;
                         font-weight: 700;
                         text-overflow: ellipsis;
@@ -171,10 +169,11 @@
                         }
 
                         @media (max-width: $width-max-mobile) {
-                            height: 3.25rem;
-                            max-height: 3.25rem;
-                            padding: 0.25rem 0.75rem;
+                            height: 3rem;
+                            max-height: 3rem;
+                            padding: 0px 0.75rem;
                             font-size: 1.25rem;
+                            line-height: 2.75rem;
                         }
 
                         @media (min-width: $width-max-mobile) {
@@ -199,8 +198,8 @@
                 margin-bottom: 1rem;
 
                 input {
-                    height: 2.75rem;
-                    max-height: 2.75rem;
+                    height: 2.5rem;
+                    max-height: 2.5rem;
                     width: 100%;
                     max-width: 100%;
                     border: none;
@@ -219,22 +218,17 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    height: 2.75rem;
-                    max-height: 2.75rem;
+                    height: 2.5rem;
+                    max-height: 2.5rem;
                     width: 4.5rem;
                     background: $color-white;
-                    border: 0.2rem solid $color-white;
                     border-radius: $block-border-radius;
+                    border: 0.2rem solid darken($color-silvery, 2.5%) !important;
+                    box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
                     font-weight: 700;
                     font-size: 1.25rem;
                     cursor: pointer;
                     user-select: none;
-
-                    @media (min-width: $width-max-mobile) {
-                        &:hover {
-                            border-color: $color-primary;
-                        }
-                    }
                 }
             }
 
@@ -242,10 +236,7 @@
                 flex-grow: 0;
                 flex-shrink: 0;
                 justify-content: center;
-                height: 4rem;
-                min-height: 4rem;
-                max-height: 4rem;
-                padding: 1rem;
+                padding: 1.75rem 1rem;
                 background: $color-primary;
                 font-weight: 700;
                 font-size: 1.25rem;
@@ -254,12 +245,6 @@
 
                 &.Button-Disabled {
                     cursor: not-allowed;
-                }
-
-                @media (min-width: $width-max-mobile) {
-                    &.Button-Disabled:hover {
-                        box-shadow: none;
-                    }
                 }
             }
         }
