--- a/src/components/Slices/Slices.scss
+++ b/src/components/Slices/Slices.scss
@@ -5,8 +5,8 @@
     padding: 0px 0px 1rem 0px;
     
     .Slice {
-        width: $width-max-page;
-        max-width: 100vw;
+        width: 100vw;
+        max-width: 100%;
         margin: 0px auto;
     }
 }
