--- a/src/components/Slices/components/Carousel/Carousel.scss
+++ b/src/components/Slices/components/Carousel/Carousel.scss
@@ -5,6 +5,10 @@
     max-width: 100%;
     overflow-y: hidden;
 
+    span {
+        cursor: pointer;
+    }
+
     &.Index-0 {
         margin-top: -1rem;
         margin-bottom: -1.15rem;
@@ -17,10 +21,12 @@
     .Link {
         display: block;
         max-width: 100%;
+        cursor: pointer;
 
         .Image {
             display: block;
             max-width: 100%;
+            cursor: pointer;
         }
     }
 }
