--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -111,6 +111,14 @@
         max-width: 100%;
         width: 100%;
 
+        .Button {
+            transition: 250ms ease-in-out;
+            &.Added {
+                background: var(--accent-secondary-dark);
+                font-weight: 700;
+            }
+        }
+
         .ProductCard-Actions-Action {
             display: flex;
             justify-content: flex-start;
