SEO: Add analytics events.

--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -113,6 +113,10 @@
         max-width: 100%;
     }
 
+    .CartItem-Actions {
+        user-select: none;
+    }
+
     .CartItem-Price {
         position: relative;
         flex-direction: column;
