--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -32,21 +32,27 @@
             display: flex;
             flex: 1;
             flex-grow: 1;
-            justify-content: space-between;
             align-items: flex-start;
             flex-direction: column;
             width: 100%;
             height: 100%;
             text-transform: uppercase;
-            color: $color-text-primary !important;
 
             @media (max-width: $width-max-mobile) {
                 padding-bottom: 1.5rem;
             }
 
             h2 {
-                font-size: 1.5rem;
+                font-size: 2rem;
+                font-weight: 700;
                 padding-bottom: 0.5rem;
+            }
+
+            a {
+                font-weight: 300;
+                font-size: 1.25rem;
+                line-height: 1.75rem;
+                letter-spacing: 0.05rem;
             }
 
             &.Footer-Blocks-Block-About {
