SEO: Add landing page h1s.

--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -291,6 +291,12 @@
         }
     }
 
+    &.Sale {
+        .ProductCard-Price {
+            background: #d91e18;
+        }
+    }
+
     &:empty {
         min-height: 22rem;
         height: 100%;
