UI: General UI improvments.

--- a/src/components/SocialShare/SocialShare.scss
+++ b/src/components/SocialShare/SocialShare.scss
@@ -10,7 +10,8 @@
     a {
         display: block;
         height: 25px;
-        margin-left: 1rem;
+        width: 25px;
+        margin-left: 0.5rem;
 
         img {
             height: 100%;
