--- a/src/components/PageProvider/PageProvider.scss
+++ b/src/components/PageProvider/PageProvider.scss
@@ -12,7 +12,6 @@ body {
     font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
         sans-serif;
-    transition: 250ms opacity ease-in-out;
     touch-action: manipulation;
     color: $color-black;
 
@@ -24,6 +23,10 @@ body {
         z-index: 1 !important;
         margin: 2rem !important;
     }
+}
+
+.PageProvider {
+    background: #fefefe;
 }
 
 #nprogress {
