--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -12,7 +12,7 @@
         background: $color-white;
         width: 100%;
         box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
-        border: 0.2rem solid $color-white;
+        border: 0.2rem solid $color-dark;
 
         &::placeholder {
             text-transform: uppercase;
