--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,8 @@
 @import '../../scss/app';
 
 .HeaderWrapper {
-    //position: sticky;
+    position: sticky;
     z-index: 10;
     top: 0px;
+    background: #fefefe;
 }
