--- a/src/components/Slices/components/Collapse/Collapse.scss
+++ b/src/components/Slices/components/Collapse/Collapse.scss
@@ -2,15 +2,16 @@
 
 .Slice-Collapse {
     .Slice-Collapse-Title {
-        $font-size: 1.25rem;
 
-        display: flex;
+        display: grid;
+        grid-template-columns: 2rem auto;
+        gap: 1rem;
         justify-self: flex-start;
         align-items: center;
         padding: 1rem 0px;
         font-weight: 700;
-        font-size: $font-size;
-        line-height: $font-size * 1.25;
+        font-size: 1.25rem;
+        line-height: 2rem;
         text-transform: uppercase;
         cursor: pointer;
         user-select: none;
@@ -30,14 +31,28 @@
         }
 
         .Icon {
-            margin: 0px 1rem 0px 0px;
-            font-size: $font-size * 1.25;
-            line-height: $font-size;
+            width: 2rem;
+            font-size: 1.75rem;
+            line-height: 2rem;
+            transition: 250ms ease-in-out;
+        }
+
+        &.Open {
+            .Icon {
+                rotate: 180deg;
+            }
         }
     }
 
     .Slice-Collapse-Body {
+        overflow: hidden;
+        height: 0px;
         margin: 1rem 0px;
+        transition: 250ms ease-in-out;
+
+        &.Open {
+            height: auto;
+        }
 
         p {
             font-size: 1.25rem;
