UI: Improve FAQ page.

--- a/src/components/Slices/components/Collapse/Collapse.scss
+++ b/src/components/Slices/components/Collapse/Collapse.scss
@@ -47,11 +47,12 @@
     .Slice-Collapse-Body {
         overflow: hidden;
         height: 0px;
-        margin: 1rem 0px;
+        margin: 0px;
         transition: 250ms ease-in-out;
 
         &.Open {
             height: auto;
+            margin: 1rem 0px;
         }
 
         p {
