--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -11,6 +11,10 @@
     box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
     border-radius: $block-border-radius;
 
+    &.Sale {
+        border-color: #d91e18;
+    }
+
     .ProductCard-Container {
         position: relative;
         display: grid;
@@ -266,7 +270,9 @@
 
                 .Currency {
                     position: relative;
-                    font-size: 1rem;
+                    font-size: 1.25rem;
+                    line-height: 1.75rem;
+                    margin-bottom: -0.25rem;
                 }
             }
         }
