--- a/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -10,8 +10,8 @@
     height: 2.5rem;
     margin: -0.25rem 0px 1rem 0px;
     transform: translateZ(0);
-    padding: 1rem 1rem;
-    background: #efefef;
+    //padding: 1rem 1rem;
+    //background: #efefef;
     border-radius: var(--block-border-radius);
 
     .Breadcrumbs-Content {
