--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -42,7 +42,7 @@
                 padding-bottom: 1.5rem;
             }
 
-            h2 {
+            h2, h3 {
                 font-size: 2rem;
                 font-weight: 700;
                 padding-bottom: 0.5rem;
@@ -53,6 +53,10 @@
                 font-size: 1.25rem;
                 line-height: 1.75rem;
                 letter-spacing: 0.05rem;
+
+                &:hover, &:active {
+                    text-decoration: underline;
+                }
             }
 
             &.Footer-Blocks-Block-About {
