--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -9,7 +9,7 @@
     background: $color-silvery;
     border: 0.2rem solid darken($color-silvery, 2.5%);
     box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
-    border-radius: $block-border-radius;
+    border-radius: var(--block-border-radius);
 
     &.Sale {
         border-color: #d91e18;
@@ -176,7 +176,7 @@
                         margin: 0px 0.55rem 0.55rem 0px;
                         background: $color-white;
                         border: 0.2rem solid $color-white;
-                        border-radius: $block-border-radius;
+                        border-radius: var(--block-border-radius);
                         line-height: 2rem;
                         font-size: 1.15rem;
                         font-weight: 700;
@@ -225,7 +225,7 @@
                     width: 100%;
                     max-width: 100%;
                     border: none;
-                    border-radius: $block-border-radius;
+                    border-radius: var(--block-border-radius);
                     text-align: center;
                     background: $color-white;
                     box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
@@ -245,7 +245,7 @@
                     max-height: 2.75rem;
                     width: 4.5rem;
                     background: $color-white;
-                    border-radius: $block-border-radius;
+                    border-radius: var(--block-border-radius);
                     border: 0.2rem solid darken($color-silvery, 2.5%) !important;
                     box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.25);
                     font-weight: 700;
